--- a/index.html
+++ b/index.html
@@ -478,6 +478,14 @@
     </div>
 </section>
 
+<section class="page-section bitter-divider pt-3">
+    <div class="py-4 align-items-center justify-content-center text-center">
+        <h2>
+            <img src="img/divider.png" alt=""><br/>
+        </h2>
+    </div>
+</section>
+
 <!-- Bitter 3 -->
 
 <section class="page-section bitter" id="bitter-3">
@@ -495,7 +503,7 @@
                         <img src="img/products/bottle-2.png" class="img-fluid" alt="">
                     </div>
                     <div class="col-md-6 pb-5">
-                        <h2 class="mb-3">A Modern Classic</h2>
+                        <h2 class="mb-3">Worries No Have</h2>
                         <img class="" src="img/divider-2.png" alt="divider" width="199" height="9">
                         <hr class="no-line mb-0">
                         <div class="product details">
@@ -629,7 +637,7 @@
                         <img src="img/products/bottle-2.png" class="img-fluid" alt="">
                     </div>
                     <div class="col-md-6 pb-5">
-                        <h2 class="mb-3">A Modern Classic</h2>
+                        <h2 class="mb-3">Christmas Feelings</h2>
                         <img class="" src="img/divider-2.png" alt="divider" width="199" height="9">
                         <hr class="no-line mb-0">
                         <div class="product details">
